[workspace]
members = [
    "bevy_nannou",
    "bevy_nannou_derive",
    "bevy_nannou_draw",
    "bevy_nannou_isf",
    "bevy_nannou_video",
    "examples",
    "generative_design",
    "guide/book_tests",
    "nannou",
    "nannou_audio",
    "nannou_core",
    "nannou_laser",
    "nannou_new",
    "nannou_osc",
    "nannou_package",
    "nannou_wgpu",
    "nature_of_code",
    "scripts/run_all_examples",
    "scripts/set_version",
]

# Required for wgpu v0.10 feature resolution.
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.15.0-rc.3" }
bevy_egui = { git = "https://github.com/Vrixyz/bevy_egui", branch = "bevy_main" }
bevy-inspector-egui = { git = "https://github.com/Vrixyz/bevy-inspector-egui", branch = "bevy_0.15" }
image = "0.25"
rayon = "1.10"
bevy_common_assets = { git = "https://github.com/NiklasEi/bevy_common_assets", branch = "bevy-0-15" }
serde = "1"
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
wgpu = "23.0.0"

[patch.crates-io]
bevy_egui = { git = "https://github.com/Vrixyz/bevy_egui", branch = "bevy_main" }